# ytars

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml.example  download.py  flake.nix  renovate.json  requirements.txt  shell.nix
.sqlx/: query-001c59fd9dbac0b8c1af1e4ae31a561337d9e99560451b345fadded74969df71.json  query-04cd07ce222b4776f184e19b6e8a062f7d44c4d6bf783855930e3a0af8127951.json  query-0dcd1c104502f975701eb96fab0371ecd7f08c72bc330e1f51649c23b3773cb5.json  query-0dd62e4e3f157be96c6509c1182fc621d25632469b1663e61424a060e0a30f90.json  query-1008fcb11248767e4c2a7e4ec9050bdf1b91a98beb5ba43dfe54c716a6314ce2.json  query-14dcefa8addc303ad9e300a53c4ea692e3674077bc1a6e229eda6e949d9f8955.json  query-1f2a447f34bdb207e9be8b92b9dba160a7d96b86f45672b8ebacda24e626722a.json  query-1f52df50c13abc7f033f9fe2aaa25b2bb2439f03c33ba38e8d0c5e74d045db80.json  query-271c7ad414d04ca70a7b56a0f5f5b4afd1391590239ccdde99f490746b2792bb.json  query-28d8195779494e1e628a557f7beecdc65dc71e5cc94dbc4ce65f6c10f7018c39.json  query-2cbb38d01b0b3522fdf0cfa123098f51eb827cfa30c8c2f298c94b6667fa2b09.json  query-2e35e3935220f80cf98a639ff8d0a8fb0c4ad2c0afa6f867673334e522fc8f52.json  query-2f7bcdfed6757ceca1bbd8bad6ad6c2906ba1720f02a3ed69c5b2e200a892823.json  query-373ddf0189afe28baaa004cf7ee92f0956c83a2a5fb946e09632a40ab39dd1f5.json  query-3e12968353445891f5685817028630e587fe5b7f5401e782a68fc9d93160fe13.json  query-466db2e6bc01cfcc50b888b590853b3f900917e74434c302c9d9fb27d5871973.json  query-4970f56e1d8d36928fe781c92478cd3836dceb4f012df4150389f1bd3b717f84.json  query-4f257cdcd462313a074ee21d29a71830c2df108660b0c173058726516d0cf234.json  query-53b0db601f6977e36e2a49620675e75c23bf5b44a0c67363f4fa79258de7b7f9.json  query-53d53767d25efc84b61b7feea55789b0a289cf873a607f5f90a7a57858c2c66f.json  query-550760e282d0de8a0cc44f31b420dc3a3366a0df10cadef29cdedb26797aaba6.json  query-59374986ed69e0c4bf3ef41ece9eda1a014af3c3dc67a4dad5c1681a41e12d8c.json  query-59f56cfe1dc5656889d8c2c169ca981565f2c13e79168f630f1b0906ad697528.json  query-5fb6909ed8b209b6488477214d86af495f2fdd73ba7f80f432322577f307d35a.json  query-66cb9196fdb71dfcbaf01a2dd7043b6befdeff2dd4d2b2d3eccf86659d696930.json  query-797cbb9c3396e3da74ad7630fc7eec81765df170bc7d0d48ea33849b7ab39fc4.json  query-7981e15fd0fc53fc92dfaa5244373c20e76847f7350a5e994fad2657d021a835.json  query-7f762bedafc2d8b77326a38544532823730a3be5a2fa821fa1b659c2c8fab810.json  query-8273b93826881a89f21d39dcd3434ea2e2aa0446bdde65c7e5dc70f48b8d4190.json  query-82fc83b884224c82510430d3eb3b79e2d4f8f92bf616967fd6fe211e0dca64c0.json  query-8382713d7e78f1158ecf621c8bf5fbd8006b7963c148a8db4e8b29f71effe03c.json  query-8402466e9a915fa646437078015f832b157e9294f01e5259769a6455a8977369.json  query-87f878d5831866976d6a547e0e035d97c91790519a81d57155f63018f1f7aaa0.json  query-8eeea63fbda7d7235739590fb5715e8045195282aac21af90c353cbba1f69659.json  query-8f4ee96833d9bf3173892a93ec7681aa1141ddcd245ac2870e896be5dfc330e5.json  query-8fc0fb2ae8c5146b091f712dcba02a414fc63da8de98900ecaedc7818d092d9f.json  query-988ee2ea869d6d665a9c4fc15aa008f589ee5870568205528e78fc377a17bc42.json  query-9b6556cbcbe7196cbb1301ff4a76e470e221082f04201e6234d52ef49fbdb311.json  query-9bdb0eb5da6bbc7fc54329b4fd18b0827b12c5c6a0e262ea0916e40d1a293d09.json  query-a6e263bb317a849d6b3fe97664911f04e3cb238506d0ce38465d354ed892ccb6.json  (+21 more)
migrations/: 20231111190819_init.down.sql  20231111190819_init.up.sql  20231203182613_0.1.1.down.sql  20231203182613_0.1.1.up.sql  20231205034800_search.down.sql  20231205034800_search.up.sql  20231209094014_0.2.3.down.sql  20231209094014_0.2.3.up.sql  20231211070045_0.3.2.down.sql  (+3 more)
src/: feed.rs  (+8 more)
(+50 files in other folders)
