[package]
name = "ytars"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["cookies"] }
actix-web-static-files = "4.0.1"
askama = { version = "0.12.1", features = ["markdown"] }
clap = { version = "4.5.1", features = ["derive", "env"] }
env_logger = "0.11.2"
futures = "0.3.30"
glob = "0.3.1"
image = "0.24.8"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "time",
    "tls-native-tls",
] }
static-files = "0.2.3"
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["formatting", "parsing"] }

[build-dependencies]
static-files = "0.2.3"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
jemallocator = "0.5.4"
