[package]
name = "ytars"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["cookies"] }
actix-web-static-files = { version = "4.1.1", features = ["static-files-03"] }
askama = "0.14.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
comrak = "0.48.0"
env_logger = "0.11.3"
futures = "0.3.30"
glob = "0.3.1"
image = "0.25.0"
lazy_static = "1.4.0"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio",
    "time",
    "tls-native-tls",
] }
static-files = "0.3.1"
thiserror = "2.0.0"
time = { version = "0.3.36", features = ["formatting", "parsing"] }

[build-dependencies]
static-files = "0.3.1"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
jemallocator = "0.5.4"
